--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div>
+        <!-- LOGOS -->
+        <a href="https://vitejs.dev" target="_blank">
+          <img src="./public/vite.svg" class="logo" alt="Vite logo" />
+        </a>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
+          <img src="./javascript.svg" class="logo vanilla" alt="JavaScript logo" />
+        </a>
+
+        <!-- TITLE -->
+        <h1>Hello Vite!</h1>
+
+        <!-- COUNTER -->
+        <div class="card">
+          <button id="counter" type="button"></button>
+        </div>
+
+        <p class="read-the-docs">
+          Click on the Vite logo to learn more
+        </p>
+      </div>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
