--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- COUNTER -->
         <div class="card">
           <button id="counter" type="button"></button>
+          <button id="reset" type="button">Reset count</button>
         </div>
 
         <p class="read-the-docs">
