open second page functionality

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </a>
 
         <!-- TITLE -->
-        <h1>Hello Vite!</h1>
-
+        <h1>Hello, LocalStorage</h1>
+        <button id="openNewWindow">Let's open another window and see the magic!</button>
         <!-- COUNTER -->
         <div class="card">
           <button id="counter" type="button"></button>
-          <button id="reset" type="button">Reset count</button>
+          <button id="reset" type="button">Reset counter</button>
         </div>
       </div>
     </div>
